api/2.api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: vote
  labels:
    role: api
    env: demo
spec:
  ports:
   - protocol: TCP
     port: 8080
  selector:
    role: api
